Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12718

QSslSocket encryption failure - throwing "peerVerifyError()" method - error thrown is "QAbstractSocket::SslHandshakeFailedError" - appeared in Wk30 baseline

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.0
    • 4.7.0
    • Network: SSL
    • None
    • Symbian Wk30 base line (on Windows XP)
    • 8229eded4cba85ae53c1b03ce87981ebabd2f3ae

      Hi,

      I am checking QSsslSocket encryption on Symbian Wk30 and found that it is failing with SslHandshakeFailedError. When i tested this on Symbian Wk28 , it was working fine. After QSslSocket::startClientEncryption() method is triggered , control is going to "QSslSocket::peerVerifyError ( const QSslError & error ) " method and returning the following errors:

      102.430 [Qt Message] peerVerifyError "The issuer certificate of a locally looked up certificate could not be found"
      102.455 [Qt Message] peerVerifyError "The root CA certificate is not trusted for this purpose"

      After that, ssl connection is disconnecting with the following error message which points to "QAbstractSocket::SslHandshakeFailedError" error.

      102.740 [Qt Message] error = 13
      102.800 [Qt Message] disconnected

      I have tried by connecting to different public web servers. So, this is not a problem specific to one server. This issue is reproduced with many servers.

      This problem was not observed in Symbian Wk28 baseline. So, this seems to be a bug in Wk30. Qt version for Wk30 baseline is showing as 4.7.0, so i don't know whether it is "4.7.0-Beta" version or "4.7.0-Beta2" version. So, iam mentioning this as "4.7.0-Beta2" in the "Affects Version/s" column. I will appreciate if you can investigate this issue and give some fix for the same.

        1. QsslSocketIssue.zip
          124 kB
          BalaSubrahmanyam Varanasi
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shkearns Shane Kearns
            baluvaranasi BalaSubrahmanyam Varanasi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes