Fix regression with SSL connections failing on symbian

Due to a wrong ifdef sequence, the unix code was being compiled instead
of the symbian code for retrieving the system certificates.

Task-number: QTBUG-12718
Reviewed-by: Peter Hartmann
(cherry picked from commit 8229eded4cba85ae53c1b03ce87981ebabd2f3ae)